# winer-project

wine-lamaneDieng/: pyproject.toml
wine-lamaneDieng/dataset/: wine_test.csv  wine_train.csv
wine-lamaneDieng/notebook/: final_project.ipynb
