[tool.poetry]
name = "wine-mmboup"
version = "0.1.0"
description = ""
authors = ["Muhammadan <danelegrand@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
pandas_profiling = "^2.9.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
